# designPatterns

./: CMakeLists.txt  README.md
copyConstructor/: CMakeLists.txt  README.md
copyConstructor/inc/: cow.h  farm.h
copyConstructor/src/: CMakeLists.txt  cow.cpp  farm.cpp  main.cpp
memento/: CMakeLists.txt  README.md
memento/inc/: car.h  careTaker.h  memento.h
memento/src/: CMakeLists.txt  car.cpp  careTaker.cpp  main.cpp  memento.cpp
pimpl/: CMakeLists.txt  README.md
pimpl/inc/: car.h  carProxy_Pimpl.h
pimpl/src/: CMakeLists.txt  car.cpp  carProxy_Pimpl.cpp  main.cpp
proxy/: CMakeLists.txt  README.md
proxy/inc/: car.h  carProxy.h
proxy/src/: CMakeLists.txt  carProxy.cpp  main.cpp
singleton/: CMakeLists.txt  README.md
singleton/inc/: singleton.h
singleton/src/: CMakeLists.txt  main.cpp  singleton.cpp
